syntax = "proto3";

package org.project_planton.provider.cloudflare.cloudflared1database.v1;

import "buf/validate/validate.proto";

// CloudflareD1DatabaseSpec defines the essential configuration for creating a Cloudflare D1 database.
// This follows the 80/20 principle: only the most commonly used fields are exposed to keep the API simple.
//
// Essential Fields (The 80%):
//   - account_id: Required. The Cloudflare account ID.
//   - database_name: Required. The human-readable name for the database.
//   - region: Optional. The geographical region for the database's primary instance.
//
// Production Optional (The 20%):
//   - read_replication: Optional. Configures D1 Read Replication (Beta).
//
// Note: Preview environments are handled via Worker bindings (preview_database_id), not as a database property.
// Schema management (tables, indexes, primary keys) is handled via Wrangler CLI migrations, not at the resource level.
message CloudflareD1DatabaseSpec {
  // (Required) The Cloudflare account ID in which to create the database.
  string account_id = 1 [(buf.validate.field).required = true];

  // (Required) The unique name for the D1 database.
  // Must be unique within the account.
  string database_name = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.max_len = 64
  ];

  // (Optional) The Cloudflare region where the D1 database will be hosted.
  // This maps to the primary_location_hint property in the Cloudflare API.
  // Valid values: weur, eeur, apac, oc, wnam, enam.
  // If omitted, Cloudflare selects a default location based on your account settings.
  CloudflareD1Region region = 3;

  // (Optional) Configures D1 Read Replication (Beta).
  // Enables automatic read replication across multiple regions for lower global read latency.
  // WARNING: Enabling replication requires application-level code changes to use the D1 Sessions API.
  // Failing to use the Sessions API will cause data consistency errors.
  // If omitted, replication is disabled.
  CloudflareD1ReadReplication read_replication = 4;
}

// Enumeration of supported regions for Cloudflare D1 databases.
// These values map to the primary_location_hint field in the Cloudflare API.
enum CloudflareD1Region {
  // Unspecified region (Cloudflare will select a default).
  cloudflare_d1_region_unspecified = 0;

  // Western Europe
  weur = 1;

  // Eastern Europe
  eeur = 2;

  // Asia Pacific
  apac = 3;

  // Oceania
  oc = 4;

  // Western North America
  wnam = 5;

  // Eastern North America
  enam = 6;
}

// CloudflareD1ReadReplication configures D1 Read Replication (Beta).
// Read replication creates read-only replicas in multiple regions to reduce global read latency.
message CloudflareD1ReadReplication {
  // (Required if read_replication is set) The replication mode.
  // Valid values: "auto" (enable automatic read replication), "disabled" (disable replication).
  string mode = 1 [(buf.validate.field).required = true];
}
