syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetescertmanager.v1;

import "buf/validate/validate.proto";
import "org/project_planton/shared/kubernetes/target_cluster.proto";
import "org/project_planton/shared/options/options.proto";

// KubernetesCertManagerSpec defines configuration for kubernetes-cert-manager on any cluster.
// The addon automatically creates a ClusterIssuer with multiple DNS solvers based on the provided DNS provider configurations.
message KubernetesCertManagerSpec {
  // The Kubernetes cluster to install this addon on.
  org.project_planton.shared.kubernetes.KubernetesAddonTargetCluster target_cluster = 1;

  // Kubernetes namespace where kubernetes-cert-manager will be deployed.
  optional string namespace = 2 [(org.project_planton.shared.options.default) = "kubernetes-cert-manager"];

  // kubernetes-cert-manager version such as "v1.19.1". Used to set the image tag.
  // Minimum version v1.16.4 is enforced for Cloudflare API compatibility.
  optional string kubernetes_cert_manager_version = 3 [(org.project_planton.shared.options.default) = "v1.19.1"];

  // Helm chart version to deploy. If not specified, uses the default version.
  optional string helm_chart_version = 4 [(org.project_planton.shared.options.default) = "v1.19.1"];

  // skip installation of self-signed issuer.
  bool skip_install_self_signed_issuer = 5;

  // Global ACME configuration used for all DNS providers.
  AcmeConfig acme = 6 [(buf.validate.field).required = true];

  // List of DNS provider configurations. Each provider can manage multiple DNS zones.
  // The addon will create a single ClusterIssuer with multiple solvers based on these configurations.
  repeated DnsProviderConfig dns_providers = 7 [(buf.validate.field).repeated.min_items = 1];
}

// AcmeConfig defines global ACME settings for certificate issuance.
// These settings apply to all DNS providers configured in the addon.
message AcmeConfig {
  // ACME account email for registration and expiry notifications.
  // This email will be used by the Certificate Authority (e.g., Let's Encrypt).
  string email = 1 [(buf.validate.field).required = true];

  // ACME server URL.
  // Use https://acme-v02.api.letsencrypt.org/directory for production.
  // Use https://acme-staging-v02.api.letsencrypt.org/directory for testing.
  optional string server = 2 [(org.project_planton.shared.options.default) = "https://acme-v02.api.letsencrypt.org/directory"];
}

// DnsProviderConfig defines a DNS provider configuration with credentials and domain mappings.
// Each configuration represents a single DNS provider account/identity that manages one or more DNS zones.
message DnsProviderConfig {
  // Unique identifier for this provider configuration.
  // Used for generating Kubernetes secret names (e.g., "cloudflare-prod", "gcp-internal").
  // Must be unique within the dns_providers list.
  string name = 1 [(buf.validate.field).required = true];

  // List of DNS zones this provider is responsible for managing.
  // kubernetes-cert-manager will use this provider's solver for any certificate requests matching these zones.
  // Examples: ["example.com", "example.org"] or ["internal.example.net"]
  repeated string dns_zones = 2 [(buf.validate.field).repeated.min_items = 1];

  // Provider-specific configuration. Exactly one must be set.
  oneof provider {
    // Google Cloud DNS provider configuration.
    GcpCloudDnsProvider gcp_cloud_dns = 100;
    // AWS Route53 provider configuration.
    AwsRoute53Provider aws_route53 = 101;
    // Azure DNS provider configuration.
    AzureDnsProvider azure_dns = 102;
    // Cloudflare DNS provider configuration.
    CloudflareProvider cloudflare = 103;
  }
}

// GcpCloudDnsProvider configures Google Cloud DNS with Workload Identity.
// The addon will configure the kubernetes-cert-manager ServiceAccount with the appropriate Workload Identity annotation.
message GcpCloudDnsProvider {
  // GCP project ID that contains the DNS zones.
  string project_id = 1 [(buf.validate.field).required = true];

  // GCP Service Account email for Workload Identity.
  // This service account must have the dns.admin role on the specified project.
  string service_account_email = 2 [(buf.validate.field).required = true];
}

// AwsRoute53Provider configures AWS Route53 with IAM Roles for Service Accounts (IRSA).
// The addon will configure the kubernetes-cert-manager ServiceAccount with the appropriate IRSA annotation.
message AwsRoute53Provider {
  // AWS region where Route53 is configured.
  string region = 1 [(buf.validate.field).required = true];

  // IAM Role ARN for IRSA.
  // This role must have permissions to modify Route53 records in the specified zones.
  string role_arn = 2 [(buf.validate.field).required = true];
}

// AzureDnsProvider configures Azure DNS with Managed Identity.
// The addon will configure the kubernetes-cert-manager ServiceAccount with the appropriate Managed Identity annotation.
message AzureDnsProvider {
  // Azure subscription ID that contains the DNS zones.
  string subscription_id = 1 [(buf.validate.field).required = true];

  // Azure resource group containing the DNS zones.
  string resource_group = 2 [(buf.validate.field).required = true];

  // Managed Identity Client ID.
  // This identity must have DNS Zone Contributor role on the specified resource group.
  string client_id = 3 [(buf.validate.field).required = true];
}

// CloudflareProvider configures Cloudflare DNS for DNS-01 ACME challenges.
// The addon will create a Kubernetes Secret containing the API token in the kubernetes-cert-manager namespace.
message CloudflareProvider {
  // Cloudflare API token for DNS-01 challenge authentication.
  // Required permissions: Zone:Zone:Read and Zone:DNS:Edit
  // The token should be scoped to the specific zones listed in dns_zones for security best practices.
  string api_token = 1 [(buf.validate.field).required = true];
}
